Fixing jumpy column width

--- a/src/components/model.pcss
+++ b/src/components/model.pcss
@@ -26,6 +26,8 @@
     height: 5em;
     justify-content: center;
     min-height: 5em;
+    word-break: break-word;
+    text-align: center;
 
     .nbr-of-rows {
       font-weight: 400;
@@ -183,6 +185,7 @@
     .column {
       box-sizing: border-box;
       padding: 3.5em;
+      max-width: 48rem;
     }
 
     .column.odd {
