--- a/src/components/table-field.pcss
+++ b/src/components/table-field.pcss
@@ -36,8 +36,12 @@
     .name {
       background-color: #019b39;
       color: white;
-      padding: 0 0.5em;
     }
+  }
+
+  .name, .bartext {
+    padding: 0 0.5em;
+    margin-right: 1em;
   }
 
   .extra-information {
